// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Shared|Button Primary - Disabled 1`] = `
<div>
  <button
    class="sc-bdVaJa jSSijY"
    disabled=""
  >
    Press me
  </button>
</div>
`;

exports[`Storyshots Shared|Button Primary 1`] = `
<div>
  <button
    class="sc-bdVaJa cGLHtR"
  >
    Press me
  </button>
</div>
`;

exports[`Storyshots Shared|Button Secondary - Disabled 1`] = `
<div>
  <button
    class="sc-bdVaJa idDHeH"
    disabled=""
  >
    Press me
  </button>
</div>
`;

exports[`Storyshots Shared|Button Secondary 1`] = `
<div>
  <button
    class="sc-bdVaJa VYyUk"
  >
    Press me
  </button>
</div>
`;
